@@ -12,7 +12,7 @@ var chatDataUpdate;
 function showOccupants() {
     var chatOccupantsDiv = document.getElementById('chatMembers');
     var chatElementsDiv = document.getElementById('chat');
-    var banList = document.getElementById('bannedUsers');
+    var banList = document.getElementById('modDisplay');
 
     if (userListActive == false) {
         banList.style.display = "none";
@@ -32,7 +32,7 @@ function showOccupants() {
 function openBanList() {
     var chatOccupantsDiv = document.getElementById('chatMembers');
     var chatElementsDiv = document.getElementById('chat');
-    var banList = document.getElementById('bannedUsers');
+    var banList = document.getElementById('modDisplay');
 
     if (banListActive == false) {
         getBanList();
@@ -76,13 +76,13 @@ function connectChat() {
 function onConnect(status) {
   if (status == Strophe.Status.CONNECTING) {
     console.log('Connecting to XMPP Server...');
-    document.getElementById('bannedUsers').style.display = 'none';
+    document.getElementById('modDisplay').style.display = 'none';
     document.getElementById('unavailable').style.display = "none";
     document.getElementById('loader').style.display = "block";
     document.getElementById('chatPanel').style.display = "none";
   } else if (status == Strophe.Status.CONNFAIL) {
     console.log('Connection to XMPP Server Failed...');
-    document.getElementById('bannedUsers').style.display = 'none';
+    document.getElementById('modDisplay').style.display = 'none';
     document.getElementById('unavailable').style.display = "block";
     document.getElementById('loader').style.display = "none";
     document.getElementById('chatPanel').style.display = "none";
@@ -91,7 +91,7 @@ function onConnect(status) {
     console.log('Disconnecting from XMPP Server...');
   } else if (status == Strophe.Status.DISCONNECTED) {
     console.log('Disconnected from XMPP Server...');
-    document.getElementById('bannedUsers').style.display = 'none';
+    document.getElementById('modDisplay').style.display = 'none';
     document.getElementById('chatPanel').style.display = "none";
     document.getElementById('loader').style.display = "none";
     document.getElementById('unavailable').style.display = "block";
@@ -255,7 +255,7 @@ function room_pres_handler(a, b, c) {
           clearInterval(occupantCheck);
           clearInterval(chatDataUpdate);
 
-          document.getElementById('bannedUsers').style.display = 'none';
+          document.getElementById('modDisplay').style.display = 'none';
           document.getElementById('chatPanel').style.display = "none";
           document.getElementById('loader').style.display = "none";
           document.getElementById('unavailable').style.display = "block";
@@ -287,7 +287,7 @@ function room_pres_handler(a, b, c) {
           errorCode = error[0].attributes.code.value;
           clearInterval(occupantCheck);
           clearInterval(chatDataUpdate);
-          document.getElementById('bannedUsers').style.display = 'none';
+          document.getElementById('modDisplay').style.display = 'none';
           document.getElementById('chatPanel').style.display = "none";
           document.getElementById('loader').style.display = "none";
           document.getElementById('unavailable').style.display = "block";
